# avrai

./: .cursorrules  .cursorrules_master_plan  .cursorrules_plan_tracker  .env.example  .env.symphony.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  AVRAI.code-workspace  FIREBASE_SETUP_GUIDE.md  LICENSE  README.md  SYMPHONY_SMOKE.md  WORKFLOW.symphony.template.md  analysis_final_check.txt  analysis_options.yaml  analysis_output.txt  analysis_output_2.txt  analysis_output_3.txt  analysis_output_4.txt  analysis_output_5.txt  analyze_all.txt  analyzer_output.txt  bham_direct_match.bak  bham_direct_match.gs  bham_event_chat.bak  build.yaml  configs  docs  language_patterns.bak  language_patterns.gs  lefthook.yml  melos.yaml  personality_chat_messages.bak  project.json  pubspec.yaml  replace_crypto.py  replace_llm_backends.py  (+3 more)
.cursor/: settings.json  worktrees.json
.cursor/plans/: beta_auth_hardening_plan.md
.cursor/rules/: ci-workflows.mdc  engine.mdc  presentation.mdc  runtime.mdc  tests.mdc
.cursor/skills/: SKILLS_CATALOG.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: admin-app-ci-cd.yml  architecture-placement-guard.yml  auto-apply-fixes.yml  background-testing-optimized.yml  background-testing.yml  consumer-app-ci-cd.yml  deploy.yml  engine-runtime-boundary-guard.yml  execution-board-guard.yml  experiment-registry-guard.yml  headless-engine-smoke-guard.yml  legacy-path-guard.yml  (+13 more)
.playwright-mcp/: current_state
REALITY_ENGINE_RUNTIME_OS_BOUNDARY_REMAP_2026-02-26/: 00_INDEX.md  01_ARCHITECTURE_REMAP_AND_TARGET_STRUCTURE.md  02_CROSS_OS_RUNTIME_ARCHITECTURE_AND_CAPABILITY_MATRIX.md  04_BUILD_CI_GOVERNANCE_UPDATE_SPEC.md  05_IMPLEMENTATION_ROADMAP_AND_MILESTONES.md  06_GLOSSARY_AND_BOUNDARY_RULES.md  09_DATA_MODEL_POLICY_AND_LIFECYCLE_ARCHITECTURE.md  12_DECISION_LOG_AND_TRADEOFFS.md  14_API_CONTRACT_SKETCHES.md  19_CI_GUARD_IMPLEMENTATION_SPEC.md  20_BUILD_AND_RELEASE_CONVERSION_PLAYBOOK.md  21_DOC_BY_DOC_CHECKLIST_AND_ACCEPTANCE.md  23_PHASE1_CONTINUATION_GATE.md  25_CHANGE_FREEZE_AND_SCOPE_CONTROL.md  26_CODE_SPLIT_AND_CROSS_OS_COMPATIBILITY_QUICK_GUIDE.md  README.md
android/: gradle.properties  gradlew  settings.gradle
autopilot/: README.md  config.json  orchestrator.py  run.sh
codeql-custom-queries-java/: codeql-pack.lock.yml  codeql-pack.yml  example.ql
docs/: DATING_AND_HIRING_HOMEPAGE_CONTENT.md  EXECUTION_BOARD.csv  EXECUTION_BOARD.md  EXPERIMENT_REGISTRY.md  GITHUB_ENFORCEMENT_SETUP.md  MASTER_PLAN.md  MASTER_PLAN_TRACKER.md  ML_MODEL_TRAINING_CHECKLIST.md  ML_SIMULATION_EXPERIMENT_LOG.md  OUR_GUTS.md  PRD.md  README.md  STATUS_WEEKLY.md  WEBSITE_CONTENT_COMPLETE.md  WEBSITE_MISSING_CONTENT_ANALYSIS.md
integration_test/: README.md  onboarding_flow_complete_integration_test.dart  signal_device_smoke_test.dart  signal_two_device_transport_smoke_test.dart
ios/: Podfile
lib/: app.dart  injection_container.dart  injection_container_admin.dart  injection_container_ai.dart  injection_container_compatibility.dart  injection_container_core.dart  injection_container_device_sync.dart  injection_container_knot.dart  injection_container_payment.dart  injection_container_predictive_outreach.dart  injection_container_quantum.dart  main.dart  main_supabase_example.dart
macos/: Podfile  fix_xcode_cache.sh
native/knot_math/: Cargo.toml
native/knot_math/src/: braid_group.rs  knot_physics.rs  polynomial.rs
native/knot_math/src/adapters/: russell.rs
runtime/avrai_network/native/signal_ffi/wrapper/: CMakeLists.txt  build.sh  wrapper.c  wrapper.h
runtime/avrai_network/native/signal_ffi/wrapper_platform/: CMakeLists.txt  build.sh  callback_bridge.c  callback_bridge.h
runtime/avrai_network/native/signal_ffi/wrapper_rust/: Cargo.toml  README.md  build.sh  build_ios.sh
runtime/avrai_network/native/signal_ffi/wrapper_rust/include/: signal_ffi_wrapper.h
runtime/avrai_network/native/signal_ffi/wrapper_rust/src/: lib.rs
runtime/avrai_network/native/vibe_kernel/: Cargo.toml
runtime/avrai_network/native/vibe_kernel/src/: lib.rs
runtime/avrai_network/native/what_kernel/: Cargo.toml
runtime/avrai_network/native/what_kernel/src/: affordance.rs  errors.rs  evolution.rs  ffi.rs  lib.rs  models.rs  ontology.rs  persistence.rs  projection.rs  sync.rs  syscalls.rs
runtime/avrai_network/native/where_kernel/: Cargo.toml
runtime/avrai_network/native/where_kernel/src/: lib.rs
scripts/: EXECUTE_SPOTS_DEVELOPMENT.sh  README_TEST_FIX_AUTOMATION.md  add_admin_credential.dart  add_business_credential.dart  ai_list_generator.sh  analyze_test_quality.py  analyze_unused_imports.py  background_agent_cleanup_integration.sh  background_agent_vibe_integration.sh  build_rust_android.sh  build_rust_macos.sh  check_no_spots_refs.sh  check_portal_uniformity.sh  check_storage_enabled.dart  check_supabase_user.sh  check_test_quality.dart  cleanup_legacy_and_backups.sh  comprehensive_refactor.sh  create_storage_bucket.dart  create_supabase_user.dart  create_supabase_user.py  deploy_edge_functions.sh  diagnose_signal_libraries.sh  download_coreml_model.py  emulator_manager.sh  extract_signal_android_libs_gradle.sh  extract_signal_android_libs_via_gradle.sh  fix_gradle_android_issues.sh  fix_test_pass_rate.py  fix_timeout_tests.dart  generate_architecture_spots_registry.py  generate_master_plan_file_mapping.py  generate_ml_training_checklist.py  generate_optimized_lists.dart  generate_personalized_lists.dart  implement_vibe_coding.sh  migrate_agent_id_mappings.dart  phase_orchestration_dry_run.sh  phase_root_sync.sh  phase_section_start.sh  (+25 more)
shaders/: portal_world.frag
supabase/: config.toml
test/: flutter_test_config.dart
tool/: design_guardrails.dart  ledger_smoke.dart  update_execution_board.dart  update_three_prong_reviews.dart
work/: configs
(+10602 files in other folders)
